--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Dougherty Squadron
+title: Col Andrew J. Dougherty Squadron
 email: cvg3290@rit.edu
 url: http://dougherty.rocks
 description: "The Dougherty Squadron from RIT is interested running for AAS National Staff for the 2015-2016 term. Vote us to soar to new horizons."
